--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Querying and parsing of output of FDSN Station web service for network, station, channel and response metadata.",
   "main": "./lib/fdsnstation.js",
   "dependencies": {
-    "rsvp": "^3.3.3"
+    "rsvp": "^3.3.3",
+    "seisplotjs-model": "^0.0.1"
   },
   "scripts": {
     "lint": "eslint 'src/*.js'",
