--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "seisplotjs-fdsnstation",
-  "version": "1.0.0",
+  "version": "1.0.1-SNAPSHOT",
   "description": "Querying and parsing of output of FDSN Station web service for network, station, channel and response metadata.",
   "main": "./lib/fdsnstation.js",
   "dependencies": {
     "rsvp": "^3.5.0",
-    "seisplotjs-model": "^1.0.0"
+    "seisplotjs-model": "^1.0.1"
   },
   "scripts": {
     "lint": "eslint 'src/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "babel --presets es2015 -d lib/ src/",
-    "standalone": "browserify src/fdsnstation.js --standalone seisplotjs_fdsnstation -o seisplotjs_fdsnstation_01s_standalone.js -t [ babelify --presets [ es2015 ] ]",
-    "prepublish": "npm run compile"
+    "standalone": "browserify src/fdsnstation.js --standalone seisplotjs_fdsnstation -o seisplotjs_fdsnstation_${npm_package_version}_standalone.js -t [ babelify --presets [ es2015 ] ]",
+    "prepare": "npm run compile"
   },
   "repository": {
     "type": "git",
