--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Querying and parsing of output of FDSN Station web service for network, station, channel and response metadata.",
   "main": "./lib/fdsnstation.js",
   "dependencies": {
-    "rsvp": "^3.5.0",
-    "seisplotjs-model": "^1.0.1"
+    "rsvp": "^4.0.1",
+    "seisplotjs-model": "^1.0.2-SNAPSHOT"
   },
   "scripts": {
     "lint": "eslint 'src/*.js'",
@@ -32,12 +32,14 @@
   },
   "homepage": "https://github.com/crotwell/seisplotjs-fdsnstation",
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
-    "eslint": "^3.11.1",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^2.0.1"
+    "eslint": "^4.4.1",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1"
   }
 }
