--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "seisplotjs-fdsnstation",
-  "version": "1.0.1-alpha.2",
+  "version": "1.1.0",
   "description": "Querying and parsing of output of FDSN Station web service for network, station, channel and response metadata.",
   "main": "./lib/fdsnstation.js",
   "dependencies": {
     "rsvp": "^4.0.1",
-    "seisplotjs-model": "^1.1.0-alpha.1"
+    "seisplotjs-model": "^1.1.0"
   },
   "scripts": {
     "lint": "eslint 'src/*.js'",
@@ -34,8 +34,8 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
-    "babelify": "^7.3.0",
-    "eslint": "^4.4.1",
+    "babelify": "^8.0.0",
+    "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
