--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "seisplotjs-fdsnstation",
-  "version": "1.1.0",
+  "version": "1.1.1-alpha.1",
   "description": "Querying and parsing of output of FDSN Station web service for network, station, channel and response metadata.",
   "main": "./lib/fdsnstation.js",
   "dependencies": {
     "rsvp": "^4.0.1",
-    "seisplotjs-model": "^1.1.0"
+    "seisplotjs-model": "^1.2.0-alpha.1"
   },
   "scripts": {
     "lint": "eslint 'src/*.js'",
