--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "scripts": {
     "lint": "eslint 'src/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "babel --presets es2015 -d lib/ src/",
-    "standalone": "browserify src/fdsnstation.js --standalone seisplotjs_fdsnstation -o seisplotjs_fdsnstation_${npm_package_version}_standalone.js -t [ babelify --presets [ es2015 ] ]",
+    "flow": "flow",
+    "compile": "babel --presets es2015,flow -d lib/ src/",
+    "standalone": "browserify src/fdsnstation.js --standalone seisplotjs_fdsnstation -o seisplotjs_fdsnstation_${npm_package_version}_standalone.js -t [ babelify --presets [ es2015 flow ] ]",
     "prepare": "npm run compile"
   },
   "repository": {
@@ -40,6 +41,7 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint-plugin-standard": "^3.0.1",
+    "flow-bin": "^0.69.0"
   }
 }
