--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "lint": "eslint 'src/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1",
     "flow": "flow",
-    "compile": "babel --presets es2015,flow -d lib/ src/",
-    "standalone": "browserify src/fdsnstation.js --standalone seisplotjs_fdsnstation -o seisplotjs_fdsnstation_${npm_package_version}_standalone.js -t [ babelify --presets [ es2015 flow ] ]",
+    "flow-copy": "flow-copy-source -v -i '**/__tests__/**' src lib",
+    "build:clean": "rimraf lib",
+    "build:compile": "babel --presets=env,flow -d lib/ src/ ",
+    "compile": "npm run build:clean && npm run build:compile && npm run flow-copy",
+    "standalone": "browserify src/fdsnstation.js --standalone seisplotjs_fdsnstation -o seisplotjs_fdsnstation_${npm_package_version}_standalone.js -t [ babelify --presets [ env, flow ] ]",
     "prepare": "npm run compile"
   },
   "repository": {
@@ -34,7 +37,8 @@
   "homepage": "https://github.com/crotwell/seisplotjs-fdsnstation",
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-flow": "^6.23.0",
     "babelify": "^8.0.0",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
@@ -42,6 +46,9 @@
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
-    "flow-bin": "^0.69.0"
+    "flow-bin": "^0.73.0",
+    "flow-copy-source": "^1.3.0",
+    "flow-typed": "^2.4.0",
+    "rimraf": "^2.6.2"
   }
 }
