--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   },
   "scripts": {
     "lint": "eslint 'src/*.js'",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "flow": "flow",
     "flow-copy": "flow-copy-source -v -i '**/__tests__/**' src lib",
     "build:clean": "rimraf lib",
     "build:compile": "babel --presets=env,flow -d lib/ src/ ",
     "compile": "npm run build:clean && npm run build:compile && npm run flow-copy",
-    "standalone": "browserify src/fdsnstation.js --standalone seisplotjs_fdsnstation -o seisplotjs_fdsnstation_${npm_package_version}_standalone.js -t [ babelify --presets [ env, flow ] ]",
+    "standalone": "browserify src/fdsnstation.js --standalone seisplotjs_fdsnstation -o seisplotjs_fdsnstation_${npm_package_version}_standalone.js -t [ babelify --presets [ env flow ] ]",
     "prepare": "npm run compile"
   },
   "repository": {
@@ -37,6 +37,7 @@
   "homepage": "https://github.com/crotwell/seisplotjs-fdsnstation",
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-jest": "^23.0.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-flow": "^6.23.0",
     "babelify": "^8.0.0",
@@ -49,6 +50,19 @@
     "flow-bin": "^0.73.0",
     "flow-copy-source": "^1.3.0",
     "flow-typed": "^2.4.0",
+    "jest-cli": "^23.1.0",
     "rimraf": "^2.6.2"
+  },
+  "babel": {
+    "presets": [
+      "env",
+      "flow"
+    ]
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "<rootDir>/example/",
+      "<rootDir>/node_modules/"
+    ]
   }
 }
