--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint 'src/*.js'",
     "test": "jest",
     "flow": "flow",
+    "doc": "documentation build src/knownDataCenters.js src/quakeml.js src/stationxml.js src/seismogram.js src/util.js --github -o docs -f html --document-exported ",
     "flow-copy": "flow-copy-source -v -i '**/__tests__/**' src lib",
     "build:clean": "rimraf lib",
     "build:compile": "babel --presets=env,flow -d lib/ src/ ",
@@ -41,14 +42,15 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-flow": "^6.23.0",
     "babelify": "^8.0.0",
+    "documentation": "^8.0.0",
     "eslint": "^4.15.0",
-    "eslint-config-standard": "^10.2.1",
+    "eslint-config-standard": "^11.0.0",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
     "flow-bin": "^0.73.0",
-    "flow-copy-source": "^1.3.0",
+    "flow-copy-source": "^2.0.0",
     "flow-typed": "^2.4.0",
     "jest-cli": "^23.1.0",
     "rimraf": "^2.6.2"
