--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./lib/fdsnstation.js",
   "dependencies": {
     "rsvp": "^4.0.1",
-    "seisplotjs-model": "^1.2.0-alpha.1"
+    "seisplotjs-model": "^1.2.0"
   },
   "scripts": {
     "lint": "eslint 'src/*.js'",
@@ -49,7 +49,7 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
-    "flow-bin": "^0.73.0",
+    "flow-bin": "^0.74.0",
     "flow-copy-source": "^2.0.0",
     "flow-typed": "^2.4.0",
     "jest-cli": "^23.1.0",
